[package]
name = "duplicate-image-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
hamming = "0.1.3"
indicatif = { version = "0.17.7", features = ["rayon"] }
memmap2 = "0.9.4"
pdqhash = "0.1.1"
rayon = "1.8.1"
seahash = "4.1.0"
walkdir = "2.4.0"
